# hermes-lansenger-adapter

./: .gitignore  CHANGELOG.md  README.fr.md  README.md  README.zhHans.md  README.zhHant.md  README.zhHantHK.md  __init__.py  after-install.fr.md  after-install.md  after-install.zhHans.md  after-install.zhHant.md  after-install.zhHantHK.md  expand_sub_plugins.py  plugin.yaml  pyproject.toml
lansenger-media-tools/: __init__.py  plugin.yaml  schemas.py  tools.py
lansenger-tools/: __init__.py  plugin.yaml  schemas.py  tools.py
skills/: lansenger-messaging.md
skills/lansenger-messaging/: SKILL.md
skills/lansenger-messaging/references/: appcard-design-guidelines.md  token-and-credentials.md
skills/lansenger-setup/: SKILL.md
skills/references/: appcard-design-guidelines.md
tests/: conftest.py  test_audit_fixes.py  test_dynamic_card.py  test_extract_media.py  test_format_tool_event.py  test_group_policy.py  test_inbound.py  test_lifecycle.py  test_outbound.py  test_regression.py  test_send_media.py  test_token.py
