[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-lansenger-adapter"
version = "2.3.0"
description = "Lansenger gateway adapter + media tools plugin for Hermes Agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Lansenger PM Team" },
]
keywords = ["hermes", "agent", "lansenger", "chatbot", "messaging", "media", "enterprise-chat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "websockets>=10.0",
    "httpx>=0.24",
]

[project.entry-points."hermes_agent.plugins"]
lansenger-platform = "platforms.lansenger:register"

[tool.setuptools.packages.find]
include = ["platforms*"]

[tool.setuptools.package-data]
"platforms.lansenger" = ["plugin.yaml"]

[project.urls]
Homepage = "https://github.com/lansenger-pm/hermes-lansenger-adapter"
Repository = "https://github.com/lansenger-pm/hermes-lansenger-adapter"

# NOTE: The lansenger-tools plugin (standalone, kind: tool) lives in
# lansenger-tools/ alongside this package but is NOT a Python package
# (directory name contains hyphens). It is discovered by Hermes's directory-based
# plugin scanner when the repo is cloned via `hermes plugins install <git-url>`.
# For pip installs, only the platform adapter is registered via entry-points.
# Users who want the media tools should use `hermes plugins install` instead.